syntax = "proto3";

package tofnd;

// Key presence check types
message KeyPresenceRequest {
    string key_uid = 1;
    bytes pub_key = 2; // SEC1-encoded compressed pub key bytes to find the right mnemonic. Latest is used, if empty.
}

message KeyPresenceResponse {
    enum Response {
        RESPONSE_UNSPECIFIED = 0;
        RESPONSE_PRESENT = 1;
        RESPONSE_ABSENT = 2;
        RESPONSE_FAIL = 3;
    }

    Response response = 1;
}
